docs/reduction/inference-core/evidence/vm103-l1b-p12-runtime-20260818/srv/llmm-l1b/assembly-a/evidence/p12-native-gate/iptables-save.txt
# Generated by iptables-save v1.8.11 (nf_tables) on Tue Aug 18 14:26:54 2026
*filter
:INPUT ACCEPT [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:DOCKER - [0:0]
:DOCKER-BRIDGE - [0:0]
:DOCKER-CT - [0:0]
:DOCKER-FORWARD - [0:0]
:DOCKER-INTERNAL - [0:0]
:DOCKER-USER - [0:0]
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-FORWARD
-A DOCKER ! -i llmml1ba0 -o llmml1ba0 -j DROP
-A DOCKER-BRIDGE -o llmml1ba0 -j DOCKER
-A DOCKER-CT -o llmml1ba0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-FORWARD -j DOCKER-CT
-A DOCKER-FORWARD -j DOCKER-INTERNAL
-A DOCKER-FORWARD -j DOCKER-BRIDGE
-A DOCKER-FORWARD -i llmml1ba0 -j ACCEPT
COMMIT
# Completed on Tue Aug 18 14:26:54 2026
# Generated by iptables-save v1.8.11 (nf_tables) on Tue Aug 18 14:26:54 2026
*nat
:PREROUTING ACCEPT [3:192]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [2:204]
:POSTROUTING ACCEPT [2:204]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.30.118.0/24 ! -o llmml1ba0 -j MASQUERADE
COMMIT
# Completed on Tue Aug 18 14:26:54 2026
